[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/bubble.png" type="Texture" id=1]
[ext_resource path="res://elements/bubbles/bubbles.gd" type="Script" id=2]

[sub_resource type="ParticlesMaterial" id=1]
lifetime_randomness = 0.57
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 24.04
gravity = Vector3( 0, -400, 0 )
initial_velocity = 68.49
initial_velocity_random = 0.1
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 10.96
scale = 0.4
scale_random = 0.36

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 35, 100 )

[node name="Bubbles" type="Area2D"]
collision_layer = 16
script = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 9
process_material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -100 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_Bubbles_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Bubbles_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
